Add parse-com-database.js and songs.js  -  reads and adds all songs to DOM

--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -3,16 +3,23 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Audio Album</title>
+    <link href="styles/songStyles.css" rel="stylesheet">
+    <script src="libs/jquery-2.1.1.min.js"></script>
+    <script src="scripts/parse-com-database.js"></script>
+    <script src="scripts/songs.js"></script>
+    li
 </head>
 <body>
     <header>
         <nav>Header</nav>
     </header>
     <main>
-        <video controls="" autoplay="" name="media"><source src="http://files.parsetfss.com/a3e50472-688f-4a42-afda-df6af4172933/tfss-d1edd5f5-1c7b-4fc0-9dd6-da1d66412c61-BadCopy-UgovorSaKepom.mp3" type="audio/mp3"></video>    </main>
-    <aside>
+        <!--<video controls="" autoplay="" name="media"><source src="http://files.parsetfss.com/a3e50472-688f-4a42-afda-df6af4172933/tfss-d1edd5f5-1c7b-4fc0-9dd6-da1d66412c61-BadCopy-UgovorSaKepom.mp3" type="audio/mp3"></video>    -->
+    </main>
+        <aside>
 
     </aside>
     <footer></footer>
+
 </body>
 </html>
