new structure of scripts (MVC)

--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -5,9 +5,11 @@
     <title>Audio Album</title>
     <link href="styles/songStyles.css" rel="stylesheet">
     <script src="libs/jquery-2.1.1.min.js"></script>
-    <script src="scripts/parse-com-database.js"></script>
-    <script src="scripts/songs.js"></script>
-    li
+    <script src="scripts/requester.js"></script>
+    <script src="scripts/data.js"></script>
+    <script src="scripts/views.js"></script>
+    <script src="scripts/controller.js"></script>
+    <script src="scripts/main.js"></script>
 </head>
 <body>
     <header>
