filter by Uploader, Genre and Album

--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -4,12 +4,27 @@
     <header>
         <div class="playButton">Play</div>
         <div>
-            <div class="uploaderName"></div>
+            <div class="uploaderName" title="Uploader"></div>
             <h1 class="songName"></h1>
+            <div class="songInfo">Album: <span class="album" title="Album"></span> / Genre: <span class="genre" title="Genre"></span></div>
         </div>
     </header>
     <footer>
-        <section class="statistics">h fh fh gh fh f</section>
-        <section class="controls"> h fhfh fhgf hfgh</section>
+        <section class="statistics">
+            <span class="rating"></span>/5
+            <img src="images/yellow_star.png">
+            <img src="images/yellow_star.png">
+            <img src="images/yellow_star.png">
+            <img src="images/star.png">
+            <img src="images/star.png">
+        </section>
+        <section class="controls">
+            <button>Upload</button>
+            <button>Add to playlist</button>
+            <button>Info</button>
+            <button>Comments</button>
+            <button>Edit</button>
+            <button>Delete</button>
+        </section>
     </footer>
 </section>
