--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <title>Audio Album</title>
     <link href="styles/songStyles.css" rel="stylesheet">
-    <script src="libs/jquery-2.1.1.min.js"></script>
-    <script src="scripts/requester.js"></script>
-    <script src="scripts/data.js"></script>
-    <script src="scripts/views.js"></script>
-    <script src="scripts/controller.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="libs/jquery-2.1.1.min.js" defer></script>
+    <script src="scripts/requester.js" defer></script>
+    <script src="scripts/data.js" defer></script>
+    <script src="scripts/views.js" defer></script>
+    <script src="scripts/controller.js" defer></script>
+    <script src="scripts/main.js" defer></script>
 </head>
 <body>
     <header>
         <nav>Header</nav>
     </header>
     <main>
+        <div id="songs"></div>
         <!--<video controls="" autoplay="" name="media"><source src="http://files.parsetfss.com/a3e50472-688f-4a42-afda-df6af4172933/tfss-d1edd5f5-1c7b-4fc0-9dd6-da1d66412c61-BadCopy-UgovorSaKepom.mp3" type="audio/mp3"></video>    -->
+        <br/><br/><br/>
+        <button id="showAll">Show All Songs</button>
+        <br/><br/><br/>
+        <div>Кликни върху Genre, Album или Uploader</div>
     </main>
         <aside>
 
