--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -19,7 +19,7 @@
             <img src="images/star.png">
         </section>
         <section class="controls">
-            <button>Upload</button>
+            <button><a class="upload-button-link" download>Download</a></button>
             <button>Add to playlist</button>
             <button>Info</button>
             <button>Comments</button>
