delete song and Edit SongForm

--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -23,8 +23,8 @@
             <button>Add to playlist</button>
             <button>Info</button>
             <button>Comments</button>
-            <button>Edit</button>
-            <button>Delete</button>
+            <button class="editSong">Edit</button>
+            <button class="deleteSong">Delete</button>
         </section>
     </footer>
 </section>
