--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -3,7 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Audio Album</title>
+    <link href="styles/styles.css" rel="stylesheet">
     <link href="styles/songStyles.css" rel="stylesheet">
+    <link href="styles/songFormStyle.css" rel="stylesheet">
     <script src="libs/jquery-2.1.1.min.js" defer></script>
     <script src="scripts/requester.js" defer></script>
     <script src="scripts/data.js" defer></script>
