attribute alt added to imgs

--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -12,11 +12,11 @@
     <footer>
         <section class="statistics">
             <span class="rating"></span>/5
-            <img src="images/yellow_star.png">
-            <img src="images/yellow_star.png">
-            <img src="images/yellow_star.png">
-            <img src="images/star.png">
-            <img src="images/star.png">
+            <img src="images/yellow_star.png" alt="yellow star">
+            <img src="images/yellow_star.png" alt="yellow star">
+            <img src="images/yellow_star.png" alt="yellow star">
+            <img src="images/star.png" alt="star">
+            <img src="images/star.png" alt="star">
         </section>
         <section class="controls">
             <button><a class="upload-button-link" download>Download</a></button>
