--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -1,15 +1,15 @@
 <img class="songIcon" src="images/default-song-icon.png">
 <section>
     <div class="duration"></div>
-    <header>
+    <div class="songHeader">
         <div class="playButton">Play</div>
         <div>
             <div class="uploaderName" title="Uploader"></div>
             <h1 class="songName"></h1>
             <div class="songInfo">Album: <span class="album" title="Album"></span> / Genre: <span class="genre" title="Genre"></span></div>
         </div>
-    </header>
-    <footer>
+    </div>
+    <div class="songFooter">
         <section class="statistics">
             <span class="rating"></span>/5
             <img src="images/yellow_star.png" alt="yellow star">
@@ -19,12 +19,13 @@
             <img src="images/star.png" alt="star">
         </section>
         <section class="controls">
-            <button><a class="upload-button-link" download>Download</a></button>
+            <div><a class="upload-button-link" download>Download</a></div>
             <button>Add to playlist</button>
             <button>Info</button>
             <button>Comments</button>
             <button class="editSong">Edit</button>
             <button class="deleteSong">Delete</button>
         </section>
-    </footer>
+        <!--<section class="comments"></section>-->
+    </div>
 </section>
