Add confirmation and edit forms

--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -6,7 +6,10 @@
         <div>
             <div class="uploaderName" title="Uploader"></div>
             <h1 class="songName"></h1>
-            <div class="songInfo">Album: <span class="album" title="Album"></span> / Genre: <span class="genre" title="Genre"></span></div>
+
+            <div class="songInfo">Album: <span class="album" title="Album"></span> / Genre: <span class="genre"
+                                                                                                  title="Genre"></span>
+            </div>
         </div>
     </div>
     <div class="songFooter">
@@ -18,6 +21,8 @@
             <img src="images/star.png" alt="star">
             <img src="images/star.png" alt="star">
         </section>
+
+
         <section class="controls">
             <div><a class="upload-button-link" download>Download</a></div>
             <button>Add to playlist</button>
@@ -26,6 +31,6 @@
             <button class="editSong">Edit</button>
             <button class="deleteSong">Delete</button>
         </section>
-        <!--<section class="comments"></section>-->
     </div>
+    <!--<section class="comments"></section>-->
 </section>
