--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -5,12 +5,14 @@
     <title>Audio Album</title>
     <link href="styles/styles.css" rel="stylesheet">
     <link href="styles/songStyles.css" rel="stylesheet">
+    <link href="styles/confirmationForm.css" rel="stylesheet">
     <link href="styles/songFormStyle.css" rel="stylesheet">
     <script src="libs/jquery-2.1.1.min.js"></script>
     <script src="scripts/requester.js" defer></script>
     <script src="scripts/data.js" defer></script>
     <script src="scripts/views.js" defer></script>
     <script src="scripts/controller.js" defer></script>
+    <script src="scripts/confirmation-form.js" defer></script>
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
