--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -17,6 +17,8 @@
     <link href="./styles/hesderStyle.css" rel="stylesheet" type="text/css"/>
     <script src="scripts/load.js" type="text/javascript"></script>
     <link href="styles/sectionStyle.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/content.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/footerStyle.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header id="header"></header>
@@ -33,6 +35,8 @@
             <br/>
         </main>
     </section>
+    <br />
+    <br />
     <footer id="footer"></footer>
 </body>
 </html>
