--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -2,6 +2,8 @@
 <script src="./scripts/openBpopup.js" type="text/javascript"></script>
 <link href="./styles/bPopupStyle.css" rel="stylesheet" type="text/css"/>
 <script src="./scripts/upload.js" type="text/javascript"></script>
+<script src="./scripts/showUploadStatistics.js" type="text/javascript"></script>
+
 <nav class="navMenu">
     <ul>
         <li><a href="index.html">Музика</a></li>
@@ -10,13 +12,40 @@
         <li><a href="#">Създаване на плей листи</a></li>
     </ul>
 </nav>
-<div class="logo"><a href="index.html"><img class="imgLogo" src="./images/house_baratheon_logo.png" alt="logo"/></a></div>
+<div class="logo"><a href="index.html"><img class="imgLogo" src="./images/house_baratheon_logo.png" alt="logo"/></a>
+</div>
 <div id="element_to_pop_up">
-<a class="b-close">x<a/>
-    <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
-      <fieldset>
-          <input type="file" name="fileselect" id="fileselect"></input>
-          <input id="uploadbutton" type="button" value="Upload to Parse"/>
-      </fieldset>
-    </form>
+    <a class="b-close">x<a/>
+
+        <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
+            <fieldset>
+                <p>Select a .mp3 file</p>
+                <input type="file" name="fileselect" id="fileselect"/>
+
+                <div id="statistics">
+                    <audio id="audio"></audio>
+
+                    <p>
+                        <label>File Name:</label>
+                        <span id="filename"></span>
+                    </p>
+
+                    <p>
+                        <label>File Type:</label>
+                        <span id="filetype"></span>
+                    </p>
+
+                    <p>
+                        <label>File Size:</label>
+                        <span id="filesize"></span>
+                    </p>
+
+                    <p>
+                        <label>Song Duration:</label>
+                        <span id="duration"></span>
+                    </p>
+                </div>
+                <input id="uploadbutton" type="button" value="Upload to Parse"/>
+            </fieldset>
+        </form>
 </div>
