duration show working, + ./libs/moment.min.js added

--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -3,7 +3,7 @@
 <link href="./styles/bPopupStyle.css" rel="stylesheet" type="text/css"/>
 <script src="./scripts/upload.js" type="text/javascript"></script>
 <script src="./scripts/showUploadStatistics.js" type="text/javascript"></script>
-
+<script src="./libs/moment.min.js" type="text/javascript"></script>
 <nav class="navMenu">
     <ul>
         <li><a href="index.html">Музика</a></li>
@@ -19,6 +19,7 @@
 
         <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
             <fieldset>
+
                 <p>Select a .mp3 file</p>
                 <input type="file" name="fileselect" id="fileselect"/>
 
