--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -46,7 +46,7 @@
                         <span id="duration"></span>
                     </p>
                 </div>
-                <input id="uploadbutton" type="button" value="Upload to Parse"/>
+                <input id="uploadbutton" type="button" value="Upload"/>
             </fieldset>
         </form>
 </div>
