--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -27,7 +27,7 @@
             <div><a class="upload-button-link" download>Download</a></div>
             <button>Add to playlist</button>
             <button>Info</button>
-            <button>Comments</button>
+            <button class="commentsButton">Comments</button>
             <button class="editSong">Edit</button>
             <button class="deleteSong">Delete</button>
         </section>
