--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -29,7 +29,7 @@
             <div id="songs"></div>
             <!--<video controls="" autoplay="" name="media"><source src="http://files.parsetfss.com/a3e50472-688f-4a42-afda-df6af4172933/tfss-d1edd5f5-1c7b-4fc0-9dd6-da1d66412c61-BadCopy-UgovorSaKepom.mp3" type="audio/mp3"></video>    -->
             <br/><br/><br/>
-            <button id="showAll">Show All Songs</button>
+            <div class="button" id="showAll">Show All Songs</div>
             <br/>
             <br/>
             <br/>
