--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -6,10 +6,10 @@
 <script src="./libs/moment.min.js" type="text/javascript"></script>
 <nav class="navMenu">
     <ul>
-        <li><a href="index.html">Музика</a></li>
-        <li><a id="my-button">Качване на музика</a></li>
-        <li><a href="#">Плей листи</a></li>
-        <li><a href="#">Създаване на плей листи</a></li>
+        <li class="navLi"><a href="index.html"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Music</p></a></li>
+        <li><a id="my-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Upload</p></a></li>
+        <li><a href="#"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Playlist</p></a></li>
+        <li><a href="#"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Create</p></a></li>
     </ul>
 </nav>
 <div class="logo"><a href="index.html"><img class="imgLogo" src="./images/house_baratheon_logo.png" alt="logo"/></a>
