Upload song is ready

--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -7,7 +7,7 @@
 <nav class="navMenu">
     <ul>
         <li class="navLi"><a href="index.html"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Music</p></a></li>
-        <li><a id="my-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Upload</p></a></li>
+        <li><a id="upload-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Upload</p></a></li>
         <li><a href="#"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Playlist</p></a></li>
         <li><a href="#"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Create</p></a></li>
     </ul>
