--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -8,6 +8,7 @@
     <link href="styles/confirmationForm.css" rel="stylesheet">
     <link href="styles/songFormStyle.css" rel="stylesheet">
     <script src="libs/jquery-2.1.1.min.js"></script>
+    <script src="libs/id3-minimized.js"></script>
     <script src="scripts/requester.js" defer></script>
     <script src="scripts/data.js" defer></script>
     <script src="scripts/views.js" defer></script>
