--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -20,6 +20,11 @@
     <link href="styles/sectionStyle.css" rel="stylesheet" type="text/css"/>
     <link href="styles/content.css" rel="stylesheet" type="text/css"/>
     <link href="styles/footerStyle.css" rel="stylesheet" type="text/css"/>
+    
+    <script type="text/javascript" src="./libs/soundManager/script/soundmanager2.js"></script>
+    <script type="text/javascript" src="./scripts/bar-ui.js"></script>
+    <link href="./styles/playerBarUI-styles.css" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
     <header id="header"></header>
@@ -38,6 +43,9 @@
     </section>
     <br />
     <br />
-    <footer id="footer"></footer>
+    <footer id="footer">
+
+
+    </footer>
 </body>
 </html>
