--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -33,9 +33,6 @@
 <section id="section">
     <main>
         <div id="songs"></div>
-        <!--<video controls="" autoplay="" name="media"><source src="http://files.parsetfss.com/a3e50472-688f-4a42-afda-df6af4172933/tfss-d1edd5f5-1c7b-4fc0-9dd6-da1d66412c61-BadCopy-UgovorSaKepom.mp3" type="audio/mp3"></video>    -->
-        <br/><br/><br/>
-
         <div class="button" id="showAll">Show All Songs</div>
         <br/>
         <br/>
@@ -132,38 +129,7 @@
             <div class="sm2-playlist-wrapper">
                 <ul class="sm2-playlist-bd">
                     <li class="selected"><a
-                            href="http://freshly-ground.com/data/audio/sm2/SonReal%20-%20LA%20%28Prod%20Chin%20Injetti%29.mp3"><b>SonReal</b>
-                        - LA (Prod. Chin Injetti)<span class="label">Explicit</span></a></li>
-                    <li>
-                        <a href="http://freshly-ground.com/data/audio/sm2/SonReal%20-%20Let%20Me%20%28Prod%202oolman%29.mp3"><b>SonReal</b>
-                            - Let Me <span class="label">Explicit</span></a></li>
-                    <li>
-                        <a href="http://freshly-ground.com/data/audio/sm2/SonReal%20-%20People%20Asking.mp3"><b>SonReal</b>
-                            - People Asking <span class="label">Explicit</span></a></li>
-                    <li>
-                        <a href="http://freshly-ground.com/data/audio/sm2/SonReal%20-%20Already%20There%20Remix%20ft.%20Rich%20Kidd%2C%20Saukrates.mp3"><b>SonReal</b>
-                            - Already There Remix ft. Rich Kidd, Saukrates <span class="label">Explicit</span></a></li>
-                    <li><a href="http://freshly-ground.com/data/audio/sm2/The%20Fugitives%20-%20Graffiti%20Sex.mp3"><b>The
-                        Fugitives</b> - Graffiti Sex</a></li>
-                    <li>
-                        <a href="http://freshly-ground.com/data/audio/sm2/Adrian%20Glynn%20-%20Seven%20Or%20Eight%20Days.mp3"><b>Adrian
-                            Glynn</b> - Seven Or Eight Days</a></li>
-                    <li><a href="http://freshly-ground.com/data/audio/sm2/SonReal%20-%20I%20Tried.mp3"><b>SonReal</b> -
-                        I
-                        Tried</a></li>
-                    <li><a href="http://freshly-ground.com/data/audio/mpc/20060826%20-%20Armstrong.mp3">Armstrong
-                        Beat</a>
-                    </li>
-                    <li><a href="http://freshly-ground.com/data/audio/mpc/20090119%20-%20Untitled%20Groove.mp3">Untitled
-                        Groove</a></li>
-                    <li><a href="http://freshly-ground.com/data/audio/sm2/birds-in-kauai-128kbps-aac-lc.mp4">Birds In
-                        Kaua'i
-                        (AAC)</a></li>
-                    <li><a href="http://freshly-ground.com/data/audio/sm2/20130320%20-%20Po%27ipu%20Beach%20Waves.ogg">Po'ipu
-                        Beach Waves (OGG)</a></li>
-                    <li><a href="http://freshly-ground.com/data/audio/sm2/bottle-pop.wav">A corked beer bottle (WAV)</a>
-                    </li>
-                    <li><a href="../../demo/_mp3/rain.mp3">Rain</a></li>
+                            href="#></a></li>
                 </ul>
             </div>
 
