edit form style

--- a/Baratheon/htmlElements/songForm.html
+++ b/Baratheon/htmlElements/songForm.html
@@ -4,5 +4,8 @@
     <input type="text" placeholder="Artist" id="artist">
     <input type="text" placeholder="Album" id="album">
     <input type="text" placeholder="Genre" id="genre">
-    <div><button id="saveButton">Save</button><button id="cancelButton">Cancel</button></div>
+    <div>7
+        <div class="editSongButton" id="saveButton">Save</div>
+        <div class="editSongButton" id="cancelButton">Cancel</div>
+    </div>
 </div>
