--- a/Baratheon/htmlElements/songUploadForm.html
+++ b/Baratheon/htmlElements/songUploadForm.html
@@ -8,8 +8,8 @@
         <input type="text" placeholder="Album" id="album">
         <input type="text" placeholder="Genre" id="genre">
         <div>
-            <button id="saveButton">Save</button>
-            <button id="cancelButton">Cancel</button>
+            <button  class="editSongButton" id="saveButton">Save</button>
+            <button class="editSongButton" id="cancelButton">Cancel</button>
         </div>
     </div>
 </div>
