show all songs of playlist

--- a/Baratheon/htmlElements/playlists.html
+++ b/Baratheon/htmlElements/playlists.html
@@ -4,7 +4,7 @@
     <section>
         <div class="songHeader">
             <div>
-                <h1 class="songName">{{name}}</h1>
+                <h1 class="songName" data-songs="{{songs}}">{{name}}</h1>
 
                 <div class="songInfo">
                     Songs: <span class="album" title="Album">{{number}}</span>
