--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -38,6 +38,7 @@
     <main>
         <div id="songs"></div>
         <div id="playlists"></div>
+        <div id="current-playlists"></div>
     </main>
 </section>
 <br/>
