.playButton renamed to .addToPlayerList and refactored,styles added

--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -2,7 +2,7 @@
 <section>
     <div class="duration"></div>
     <div class="songHeader">
-        <div class="playButton">Play</div>
+        <div class="addToPlayerList">Add To Player</div>
         <div>
             <div class="uploaderName" title="Uploader"></div>
             <h1 class="songName"></h1>
