add button create playlist

--- a/Baratheon/htmlElements/playlists.html
+++ b/Baratheon/htmlElements/playlists.html
@@ -20,7 +20,7 @@
                 <img src="images/star.png" alt="star">
                 <img src="images/star.png" alt="star">
             </section>
-            <section class="controls">
+            <section class="controls" id="{{objectId}}">
                 <button class="commentsButton">Comments</button>
                 <button class="editSong">Edit</button>
                 <button class="deleteSong">Delete</button>
