--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -25,8 +25,7 @@
 
         <section class="controls">
             <div><a class="upload-button-link" download>Download</a></div>
-            <button>Add to playlist</button>
-            <button>Info</button>
+            <button class="addSongToPlaylistButton">Add to playlist</button>
             <button class="commentsButton">Comments</button>
             <button class="editSong">Edit</button>
             <button class="deleteSong">Delete</button>
