--- a/Baratheon/htmlElements/songForm.html
+++ b/Baratheon/htmlElements/songForm.html
@@ -4,7 +4,7 @@
     <input type="text" placeholder="Artist" id="artist">
     <input type="text" placeholder="Album" id="album">
     <input type="text" placeholder="Genre" id="genre">
-    <div>7
+    <div>
         <div class="editSongButton" id="saveButton">Save</div>
         <div class="editSongButton" id="cancelButton">Cancel</div>
     </div>
