--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -1,15 +1,11 @@
-<script src="./scripts/bPopup.js" type="text/javascript"></script>
-<script src="./scripts/openBpopup.js" type="text/javascript"></script>
 <link href="./styles/bPopupStyle.css" rel="stylesheet" type="text/css"/>
-<script src="./scripts/upload.js" type="text/javascript"></script>
-<script src="./scripts/showUploadStatistics.js" type="text/javascript"></script>
 <script src="./libs/moment.min.js" type="text/javascript"></script>
 <nav class="navMenu">
     <ul>
         <li class="navLi"><a href="index.html"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Music</p></a></li>
         <li><a id="upload-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Upload</p></a></li>
         <li><a id="playlists-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Playlist</p></a></li>
-        <li><a href="#"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Create</p></a></li>
+        <li><a id="create-playlists-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Create</p></a></li>
     </ul>
 </nav>
 <div class="logo"><a href="index.html"><img class="imgLogo" src="./images/house_baratheon_logo.png" alt="logo"/></a>
