--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -1,18 +1,15 @@
+<script src="./scripts/bPopup.js" type="text/javascript"></script>
+<script src="./scripts/openBpopup.js" type="text/javascript"></script>
+<script src="./scripts/upload.js" type="text/javascript"></script>
+<script src="./scripts/showUploadStatistics.js" type="text/javascript"></script>
 <script src="./libs/moment.min.js" type="text/javascript"></script>
 
 <nav class="navMenu">
     <ul>
-<<<<<<< .mine
         <li class="navLi"><a href="index.html"><img class="buttonImg"alt="vinyl"/><p class="menuText">Music</p></a></li>
         <li><a id="upload-button"><img class="buttonImg" alt="vinyl"/><p class="menuText">Upload</p></a></li>
         <li><a id="playlists-button"><img class="buttonImg" alt="vinyl"/><p class="menuText">Playlist</p></a></li>
         <li><a href="#"><img class="buttonImg" alt="vinyl"/><p class="menuText">Create</p></a></li>
-=======
-        <li class="navLi"><a href="index.html"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Music</p></a></li>
-        <li><a id="upload-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Upload</p></a></li>
-        <li><a id="playlists-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Playlist</p></a></li>
-        <li><a id="create-playlists-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Create</p></a></li>
->>>>>>> .r58
     </ul>
 </nav>
 
