--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -2,8 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Audio Album Baratheon</title>
-
+    <title>Audio Album Bar-At-Heon</title>
     <link href="styles/styles.css" rel="stylesheet">
 
     <script src="libs/jquery-2.1.1.min.js"></script>
@@ -16,6 +15,7 @@
     <script src="scripts/controller.js" defer></script>
     <script src="scripts/confirmation-form.js" defer></script>
     <script src="scripts/main.js" defer></script>
+
     <script src="scripts/load.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="./libs/soundManager/script/soundmanager2.js" defer></script>
