--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -16,6 +16,8 @@
     <script src="scripts/confirmation-form.js" defer></script>
     <script src="scripts/main.js" defer></script>
 
+    <script src="./libs/moment.min.js" type="text/javascript"></script>
+
     <script src="scripts/load.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="./libs/soundManager/script/soundmanager2.js" defer></script>
