--- a/Baratheon/htmlElements/song.html
+++ b/Baratheon/htmlElements/song.html
@@ -24,7 +24,7 @@
 
 
         <section class="controls">
-            <div><a class="upload-button-link" download>Download</a></div>
+            <a class="upload-button-link" download>Download</a>
             <button class="addSongToPlaylistButton">Add to playlist</button>
             <button class="commentsButton">Comments</button>
             <button class="editSong">Edit</button>
