--- a/Baratheon/htmlElements/songUploadForm.html
+++ b/Baratheon/htmlElements/songUploadForm.html
@@ -1,5 +1,5 @@
 <div class="songForm">
-    <h1>Choose music file</h1>
+    <h1>Choice music file</h1>
     <input id="upload" type="file" placeholder="Upload file">
 
     <div id="edit-forms">
@@ -7,9 +7,6 @@
         <input type="text" placeholder="Artist" id="artist">
         <input type="text" placeholder="Album" id="album">
         <input type="text" placeholder="Genre" id="genre">
-        <input type="text" placeholder="Size" id="size">
-        <input type="text" placeholder="Duration" id="duration">
-
         <div>
             <button  class="editSongButton" id="saveButton">Save</button>
             <button class="editSongButton" id="cancelButton">Cancel</button>
