--- a/Baratheon/header/header.html
+++ b/Baratheon/header/header.html
@@ -1,27 +1,17 @@
-<script src="./scripts/bPopup.js" type="text/javascript"></script>
-<script src="./scripts/openBpopup.js" type="text/javascript"></script>
-<script src="./scripts/upload.js" type="text/javascript"></script>
-<script src="./scripts/showUploadStatistics.js" type="text/javascript"></script>
+<link href="./styles/bPopupStyle.css" rel="stylesheet" type="text/css"/>
 <script src="./libs/moment.min.js" type="text/javascript"></script>
-
-<div id="wrapper-header">
-    <div class="logo">
-        <a href="index.html">
-            <img class="imgLogo" alt="an elk"></a>
-    </div>
-
-    <nav class="navMenu">
-        <ul>
-            <li class="navLi"><a href="index.html"><img class="buttonImg"alt="vinyl"/><p class="menuText">Music</p></a></li>
-            <li><a id="upload-button"><img class="buttonImg" alt="vinyl"/><p class="menuText">Upload</p></a></li>
-            <li><a id="playlists-button"><img class="buttonImg" alt="vinyl"/><p class="menuText">Playlist</p></a></li>
-            <li><a href="#"><img class="buttonImg" alt="vinyl"/><p class="menuText">Create</p></a></li>
-        </ul>
-    </nav>
+<nav class="navMenu">
+    <ul>
+        <li class="navLi"><a href="index.html"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Music</p></a></li>
+        <li><a id="upload-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Upload</p></a></li>
+        <li><a id="playlists-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Playlist</p></a></li>
+        <li><a id="create-playlists-button"><img class="buttonImg" src="./images/button.png" alt=""/><p class="menuText">Create</p></a></li>
+    </ul>
+</nav>
+<div class="logo"><a href="index.html"><img class="imgLogo" src="./images/house_baratheon_logo.png" alt="logo"/></a>
 </div>
-
 <div id="element_to_pop_up">
-    <a class="b-close">x</a>
+    <a class="b-close">x<a/>
 
         <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
             <fieldset>
@@ -29,7 +19,7 @@
                 <p>Select a .mp3 file</p>
                 <input type="file" name="fileselect" id="fileselect"/>
 
-                <div id="file-information-upload">
+                <div id="statistics">
                     <audio id="audio"></audio>
 
                     <p>
