--- a/Baratheon/index.html
+++ b/Baratheon/index.html
@@ -2,8 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Audio Album Bar-At-Heon</title>
+    <title>Audio Album</title>
     <link href="styles/styles.css" rel="stylesheet">
+    <link href="styles/songStyles.css" rel="stylesheet">
+    <link href="styles/confirmationForm.css" rel="stylesheet">
+    <link href="styles/songFormStyle.css" rel="stylesheet">
 
     <script src="libs/jquery-2.1.1.min.js"></script>
     <script src="libs/id3-minimized.js"></script>
@@ -16,9 +19,11 @@
     <script src="scripts/confirmation-form.js" defer></script>
     <script src="scripts/main.js" defer></script>
 
-    <script src="./libs/moment.min.js" type="text/javascript"></script>
-
+    <link href="./styles/hesderStyle.css" rel="stylesheet" type="text/css"/>
     <script src="scripts/load.js" type="text/javascript"></script>
+    <link href="styles/sectionStyle.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/content.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/footerStyle.css" rel="stylesheet" type="text/css"/>
 
     <script type="text/javascript" src="./libs/soundManager/script/soundmanager2.js" defer></script>
     <script type="text/javascript" src="./scripts/bar-ui.js" defer></script>
