--- a/Baratheon/Baratheon/htmlElements/song.html
+++ b/Baratheon/Baratheon/htmlElements/song.html
@@ -24,7 +24,9 @@
 
 
         <section class="controls">
-            <a class="upload-button-link" download>Download</a>
+            <div>
+                <a class="upload-button-link" download>Download</a>
+            </div>
             <button class="addSongToPlaylistButton">Add to playlist</button>
             <button class="commentsButton">Comments</button>
             <button class="editSong">Edit</button>
