--- a/Baratheon/Baratheon/htmlElements/addComment.html
+++ b/Baratheon/Baratheon/htmlElements/addComment.html
@@ -1,6 +1,10 @@
 <form id="enter-comment">
+
+    <div id="author">
+        <label for="user" class="comment-input">Author:</label>
+        <input type="text" class="comment-input" name="user" id="user" placeholder="guest">
+        <input id="submit" type="button" value="Submit">
+    </div>
+    
     <textarea id="text-comments" class="comment-input" name="text-comments" placeholder="enter comments"></textarea>
-    <label for="user" class="comment-input">Author:</label>
-    <input type="text" class="comment-input" name="user" id="user" placeholder="guest">
-    <input id="submit" type="button" value="Submit">
 </form>
